test/src/e2e_vm_tests/test_programs/valid_impurity/src/main.sw
contract;

abi ImpurityTest {
    fn impure_func() -> bool;
}

impl ImpurityTest for Contract {
    fn impure_func() -> bool {
        true
    }
}
