test/src/e2e_vm_tests/test_programs/should_fail/abi_impl_pub_fn/src/main.sw
contract;

abi MyContract {
    fn test_function() -> bool;
}

impl MyContract for Contract {
    pub fn test_function() -> bool {
        true
    }
}